--- a/404.html
+++ b/404.html
@@ -14,8 +14,8 @@
     <header>
       <div class="container">
         <div class="header__top">
-          <div class="header__logo"><img src="../img/logo.png" alt=""/></div>
-          <div class="header__logo-mobile"><img src="../img/logo-mob.png" alt=""/></div>
+          <div class="header__logo"><img src="./img/logo.png" alt=""/></div>
+          <div class="header__logo-mobile"><img src="./img/logo-mob.png" alt=""/></div>
           <div class="header__buttons"><button class="button-style button-style--mint" id="callbackBtn">Обсудить проект</button>
             <div class="header__links"><a class="header__link header__link--phone" href="tel:+7 (495) 542-22-82">+7 (495) 542-22-82</a><a class="header__link header__link--mail" href="mailto:info@wheil.pro">info@wheil.pro</a></div>
           </div>
@@ -72,7 +72,7 @@
     </section>
 
 
-    
+
     </main>
 
 
