nu vrode sakomchil

--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
         </div>
         <div class="header__bottom">
 
-          <nav class="header__nav">
+          <nav id="accordion" class="header__nav">
             <ul class="header__nav-list">
-              <li class="nav__menu-item"> <a href="">Оборудование <i class="fas fa-chevron-down"></i></a>
+              <li class="nav__menu-item active">
+                <a href="#">Оборудование <i class="fas fa-chevron-down"></i></a>
                 <ul class="header__nav-list-inner">
                   <li class="nav__sub-menu-item"><a href=""> Промышленные чиллеры</a></li>
                   <li class="nav__sub-menu-item"><a href=""> Драй кулеры и градирни</a></li>
@@ -91,7 +92,6 @@
 
     <section class="catalog-section">
       <div class="container">
-
         <div class="catalog-wrapper">
 
           <div class="catalog-section__item">
@@ -187,7 +187,6 @@
 
 
   </main>
-
 
 
   <footer>
